<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mycompany</groupId>
    <artifactId>DirectMemory</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>DirectMemory</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>TraditionalJavaMemoryLayoutExplicitGC</id>
            <activation>
                <property>
                    <name>TraditionalJavaMemoryLayoutExplicitGC</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.2.1</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-server</argument>
                                <argument>-Xms4g</argument>
                                <argument>-Xmx4g</argument>
                                <argument>-XX:+PrintGCDetails</argument>
                                <argument>-XX:+PrintGCDateStamps</argument>
                                <argument>-XX:+PrintTenuringDistribution</argument>
                                <argument>-XX:+PrintHeapAtGC</argument>
                                <argument>-XX:+PrintGCApplicationConcurrentTime</argument>
                                <argument>-XX:+PrintGCApplicationStoppedTime</argument>
                                <argument>-XX:+PrintSafepointStatistics</argument>
                                <argument>-Xloggc:TraditionalExplicitGCLogs.txt</argument>
                                <argument>-classpath</argument>
                                <classpath />
                                <argument>org.mk.training.direct.TraditionalJavaMemoryLayout</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>TraditionalJavaMemoryLayout</id>
            <activation>
                <property>
                    <name>TraditionalJavaMemoryLayout</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.2.1</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-server</argument>
                                <argument>-Xms4g</argument>
                                <argument>-Xmx4g</argument>
                                <argument>-XX:+PrintGCDetails</argument>
                                <argument>-XX:+PrintGCDateStamps</argument>
                                <argument>-XX:+PrintTenuringDistribution</argument>
                                <argument>-XX:+PrintHeapAtGC</argument>
                                <argument>-XX:+PrintGCApplicationConcurrentTime</argument>
                                <argument>-XX:+PrintGCApplicationStoppedTime</argument>
                                <argument>-XX:+PrintSafepointStatistics</argument>
                                <argument>-Xloggc:TraditionalGCLogs.txt</argument>
                                <argument>-classpath</argument>
                                <classpath />
                                <argument>org.mk.training.direct.TraditionalJavaMemoryLayout</argument>
                                <argument>false</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>DirectJavaMemoryLayout</id>
            <activation>
                <property>
                    <name>DirectJavaMemoryLayout</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.2.1</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-server</argument>
                                <argument>-Xms100m</argument>
                                <argument>-Xmx100m</argument>
                                <argument>-XX:+PrintGCDetails</argument>
                                <argument>-XX:+PrintGCDateStamps</argument>
                                <argument>-XX:+PrintTenuringDistribution</argument>
                                <argument>-XX:+PrintHeapAtGC</argument>
                                <argument>-XX:+PrintGCApplicationConcurrentTime</argument>
                                <argument>-XX:+PrintGCApplicationStoppedTime</argument>
                                <argument>-XX:+PrintSafepointStatistics</argument>
                                <argument>-Xloggc:DirectGCLogs.txt</argument>
                                <argument>-classpath</argument>
                                <classpath />
                                <argument>org.mk.training.direct.DirectJavaMemoryLayout</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        
        <profile>
            <id>MemoryAccessPatternsLinearWalk</id>
            <activation>
                <property>
                    <name>MemoryAccessPatternsLinearWalk</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.2.1</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-server</argument>
                                <argument>-Xms4g</argument>
                                <argument>-Xmx4g</argument>
                                <argument>-classpath</argument>
                                <classpath />
                                <argument>org.mk.training.accesspatterns.MemoryAccessPatterns</argument>
                                <argument>1</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>MemoryAccessPatternsRandomPageWalk</id>
            <activation>
                <property>
                    <name>MemoryAccessPatternsRandomPageWalk</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.2.1</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-server</argument>
                                <argument>-Xms4g</argument>
                                <argument>-Xmx4g</argument>
                                <argument>-classpath</argument>
                                <classpath />
                                <argument>org.mk.training.accesspatterns.MemoryAccessPatterns</argument>
                                <argument>2</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>MemoryAccessPatternsRandomHeapWalk</id>
            <activation>
                <property>
                    <name>MemoryAccessPatternsRandomHeapWalk</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.2.1</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-server</argument>
                                <argument>-Xms4g</argument>
                                <argument>-Xmx4g</argument>
                                <argument>-classpath</argument>
                                <classpath />
                                <argument>org.mk.training.accesspatterns.MemoryAccessPatterns</argument>
                                <argument>3</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        
    </profiles>
    
</project>
